# ausmetrics

./: .env.local  Cargo.toml  README.md  input.css  package-lock.json  package.json
.zed/: debug.json
frontend/: .env.local  Cargo.toml  README.md  input.css  package.json  page-design.html  pnpm-lock.yaml  tailwind.config.js
frontend/assets/: sidebar.tsx
frontend/src/: app.rs  main.rs
frontend/src/components/: header.rs  line_chart.rs  mod.rs  theme_toggle.rs
frontend/style/: main.css  tailwind.css
graphql-server/: .env.local  Cargo.toml  build.rs
graphql-server/src/: error.rs  ffi.rs  graph.rs  hs_runtime.rs  main.rs  param.rs  schema.rs
graphql-server/static/: CPI.json  CPI.structure.json  CPI_simple.json  actualconstraint.json  categorisation.json  categoryscheme.json  codelist.json  conceptscheme.json  contentconstraint.json  dataflow.json  dataflows.json  datastructure.json
src/: app.rs  lib.rs  main.rs
src/components/: line_chart.rs
style/: main.css
