[package]
name = "graphql-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.101"
async-graphql = { version = "7.2.1", features = ["dynamic-schema"]}
async-graphql-actix-web = "7.2.1"
async-graphql-value = "7.2.1"
dotenv = "0.15.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
serde_json = "1.0.149"
serde_yaml2 = "0.1.3"
thiserror = "2.0.18"
yaml-rust2 = "0.11.0"
