[package]
name = "graphql-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = {version = "4.5.1", features = ["macros"]}
anyhow = "1.0.101"
async-graphql = { version = "7.2.1", features = ["dynamic-schema", "chrono"]}
async-graphql-actix-web = "7.2.1"
async-graphql-value = "7.2.1"
bytes = "1.11.1"
cc = "1.2.56"
chrono = {version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.11.9"
futures = "0.3.32"
jsonpath-rust = "1.0.4"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
serde_json = {version = "1.0.149", features = ["preserve_order"]}
serde_yaml2 = "0.1.3"
thiserror = "2.0.18"
yaml-rust2 = "0.11.0"
